<resources>
    <string name="app_name">SBC Maharashtra</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id" translatable="false">270655986623139</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="title_activity_eventdetail">eventdetail</string>
    <string name="title_activity_profiledetail">profiledetail</string>
    <string name="title_activity_newsdetail">newsdetail</string>
    <string name="SignIn_button">Sign In</string>
    <string name="Dont_have_an_account">Don\'t have an account ?</string>
    <string name="SignUp_button">Sign Up</string>
    <string name="Username">UserName</string>
    <string name="Password">Password</string>
    <string name="Mobileno">Mobile no.</string>
    <string name="profile">Bio-Data</string>
    <string name="event">Event</string>
    <string name="news">News</string>
    <string name="Favourite">Favourite</string>
    <string name="ContectUs">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="Search_Profile">Search Profile</string>
    <string name="Search_Event">Search Event</string>
    <string name="Search_News">Search News</string>
    <string name="Father_Name">Father Name</string>
    <string name="Mother_Tounge">Mother Tounge</string>
    <string name="Date_Of_Birth">Date Of Birth</string>
    <string name="Birth_City">Birth City</string>
    <string name="Height">Height</string>
    <string name="Complex">Complex</string>
    <string name="Sub_Cast">Sub Cast</string>
    <string name="Manglic">Manglic</string>
    <string name="Education">Education</string>
    <string name="Income">Income</string>
    <string name="Profession">Profession</string>
    <string name="Address">Address</string>
    <string name="Contact">Contact</string>
    <string name="Expectation">Expectation</string>
    <string name="Source">Source</string>
    <string name="Type">Type</string>
    <string name="Location">Location</string>
    <string name="Event_On">Event On</string>
    <string name="State">State</string>
    <string name="Search">Search</string>
    <string name="Days">Days</string>
    <string name="Upcoming">Upcoming</string>
    <string name="Past">Past</string>
    <string name="Any">Any</string>
    <string name="Looking_For">Looking For</string>
    <string name="Bride">Bride</string>
    <string name="Groom">Groom</string>
    <string name="Age">Age</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Partial">Partial</string>
    <string name="Region">Region</string>
    <string name="Added_Since">Added Since</string>
    <string name="Enter_Number_Of_Days_Back">Enter Number Of Days Back</string>
    <string name="News_Comment">News Comment</string>
    <string name="Event_Comment">Event Comment</string>
    <string name="News_Like">News Like</string>
    <string name="Event_Like">Event Like</string>
    <string name="Enter_passcode">Enter Passcode</string>
    <string name="passcode"> Passcode</string>
    <string name="submit">Submit</string>
    <string name="apptitle">koshti Vadhu Var</string>
    <string name="LIKEIT">Like It</string>
    <string name="Description">Description</string>
    <string name="title_activity_event_image">EventImage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="banner_ad_unit_id">ca-app-pub-8406780848894798/5390259469</string>
    <string name="title_activity_event_full_screen_image">EventFullScreenImage</string>
    <string name="title_activity_news_full_screen_image">NewsFullScreenImage</string>
    <string name="title_activity_full_size_image_event">FullSizeImageEvent</string>
    <string name="title_activity_news_full_size_image">NewsFullSIzeImage</string>

</resources>