<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fillViewport="true">





<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:weightSum="1"
    android:id="@+id/popupevent"
    android:background="#ffffff">


    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/close"
        android:background="@drawable/close"
        android:layout_gravity="right"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Type"
        android:textSize="15dp"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/past"
        android:layout_toLeftOf="@+id/upcoming"
        android:layout_toStartOf="@+id/upcoming" />





    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:weightSum="5">

        <Button
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/Upcoming"
            android:textAllCaps="false"
            android:id="@+id/upcoming"

            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:layout_alignTop="@+id/textView5"
            android:layout_toLeftOf="@+id/past"
            android:layout_toStartOf="@+id/past"
            android:layout_alignBottom="@+id/past" />

        <Button
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/Past"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:id="@+id/past"
            android:layout_marginRight="20dp"

            android:background="@drawable/button"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/any"
            android:layout_toStartOf="@+id/any" />

        <Button
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/Any"
            android:textAllCaps="false"

            android:layout_weight="1"
            android:id="@+id/any"
            android:background="@drawable/button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Location"
        android:textSize="15dp"
        android:layout_marginTop="20dp"

        android:id="@+id/textView10"
        android:layout_alignTop="@+id/editText4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5dp"
        android:imeActionLabel="Done"
        android:singleLine="true"

        android:background="@drawable/edittextshapegray"
        android:ems="10">


        </AutoCompleteTextView>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Event_On"
            android:textSize="15dp"
            android:id="@+id/textView7"
            android:layout_alignBottom="@+id/seekBar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.81" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Days"
            android:textSize="15dp"
            android:id="@+id/day"
            android:textColor="#ae0e00"
            android:layout_alignTop="@+id/seekBar"
            android:layout_alignRight="@+id/any"
            android:layout_alignEnd="@+id/any" />


    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:thumb="@drawable/seek_thumb_normal"



        android:layout_toStartOf="@+id/day"
        android:layout_toLeftOf="@+id/day"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Source"
        android:textSize="15dp"
        android:id="@+id/textView8"
        android:layout_marginTop="20dp"
        android:layout_alignBaseline="@+id/dis"
        android:layout_alignBottom="@+id/dis"
        android:layout_toStartOf="@+id/editText4"
        android:layout_toLeftOf="@+id/editText4" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="5"
        android:background="@drawable/edittextshapegray"
        >



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:id="@+id/dis"
        android:spinnerMode="dialog"
        android:layout_below="@+id/day"
        android:background="@color/white"
        android:layout_margin="1dp"

        android:layout_alignLeft="@+id/search"
        android:layout_alignStart="@+id/search"

        android:layout_weight="4" />



        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@mipmap/drop"
            android:layout_weight="1"
            android:id="@+id/sim" />




    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Region"
        android:textSize="15dp"
        android:layout_marginTop="20dp"

        android:id="@+id/textView9"
        android:layout_alignTop="@+id/region"
        android:layout_toLeftOf="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="5"
        android:background="@drawable/edittextshapegray"
        >



        <Spinner
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:id="@+id/region"
            android:spinnerMode="dialog"
            android:layout_below="@+id/day"
            android:background="@color/white"
            android:layout_margin="1dp"

            android:layout_alignLeft="@+id/search"
            android:layout_alignStart="@+id/search"

            android:layout_weight="4" />



        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@mipmap/drop"
            android:layout_weight="1"
            android:clickable="true"
            android:id="@+id/rim" />




    </LinearLayout>


    <Button
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"

        android:textColor="#ffffff"
        android:background="#ae0e00"
        android:id="@+id/search"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />




</LinearLayout>

</ScrollView>